--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "nodemon": "^2.0.14"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.1",
     "cookie-parser": "^1.4.6",
     "cookie-session": "^2.0.0",
@@ -31,8 +32,7 @@
     "express-rate-limit": "^6.0.5",
     "express-session": "^1.17.2",
     "helmet": "^4.6.0",
-    "mongoose": "^6.1.5",
     "mysql2": "^2.3.2",
-    "uuid": "^8.3.2"
+    "sequelize": "^6.13.0"
   }
 }
