--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express": "^4.17.1",
     "express-rate-limit": "^6.0.5",
     "express-session": "^1.17.2",
+    "express-validator": "^6.14.0",
     "helmet": "^4.6.0",
     "mysql2": "^2.3.2",
     "sequelize": "^6.13.0"
